force-app/main/default/objects/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_UR_CASE_AGREEMENTS_VIEW. This external object is used specifically for Utilization Reports to return Agreements related to a Case by Reporting Year.</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_UR_CASE_AGREEMENTS_VIEW</externalName>
    <label>Utilization Report Case Agreement</label>
    <pluralLabel>Utilization Report Case Agreements</pluralLabel>
</CustomObject>