force-app/main/default/objects/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x/fields/AGREEMENT_END_DT__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_END_DT__c</fullName>
    <description>AGREEMENT_END_DT</description>
    <externalDeveloperName>AGREEMENT_END_DT</externalDeveloperName>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>