force-app/main/default/objects/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x/fields/AGREEMENT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_STATUS__c</fullName>
    <description>AGREEMENT_STATUS</description>
    <externalDeveloperName>AGREEMENT_STATUS</externalDeveloperName>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>