force-app/main/default/objects/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x/fields/AGREEMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TYPE__c</fullName>
    <description>AGREEMENT_TYPE</description>
    <externalDeveloperName>AGREEMENT_TYPE</externalDeveloperName>
    <label>Agreement Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>