force-app/main/default/objects/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x/fields/AGREEMENT_TYPE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TYPE_DESCRIPTION__c</fullName>
    <description>AGREEMENT_TYPE_DESCRIPTION</description>
    <externalDeveloperName>AGREEMENT_TYPE_DESCRIPTION</externalDeveloperName>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>