force-app/main/default/objects/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x/fields/CASE_AGREEMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_AGREEMENT_RECID__c</fullName>
    <description>CASE_AGREEMENT_RECID</description>
    <externalDeveloperName>CASE_AGREEMENT_RECID</externalDeveloperName>
    <label>Case Agreement Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>