force-app/main/default/objects/Forrester_SHIR_UR_CASE_AGREEMENTS_VIE__x/fields/CASE_RECID_UTIL_REPORT__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID_UTIL_REPORT__c</fullName>
    <description>CASE_RECID_UTIL_REPORT</description>
    <externalDeveloperName>CASE_RECID_UTIL_REPORT</externalDeveloperName>
    <label>CASE_RECID_UTIL_REPORT</label>
    <length>24</length>
    <referenceTargetField>Utilization_Report__c.Case_RecId_ExternalId__c</referenceTargetField>
    <referenceTo>Utilization_Report__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>IndirectLookup</type>
</CustomField>